# msgw

./: .dockerignore  .gitignore  Dockerfile  README.md  agents.md  pyproject.toml
.github/prompts/: README.prompt.md  debug.prompt.md  project.prompt.md
.github/workflows/: docker-image.yml
.run/: dev.run.xml  run.run.xml  uvicorn.run.xml
.zed/: debug.json
doc/: bsl.md  msgw.bsl
src/msgw/: __init__.py  config.py  core.py  ecies.py  environ.md  environ.py  llm.py  model.py  proxy.py  settings.py  ws.py
test/: main.py
tests/: test_proxy.md  test_proxy.py
