[project]
name = "msgw"
version = "0.0.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "pydantic[email]",
    "pydantic-extra-types[all]",
    "cashews[dill,diskcache,speedup,redis]>=7.5.0",
    "cashews-mongo>=0.1.0",
    "asyncer",
    "yarl",
    "uv-build>=0.11.14,<0.12",
    "uvicorn[standard]>=0.46.0",
    "pydantic-settings>=2.14.1",
    "cryptography",
    "fastapi-reverse-proxy",
]

[tool.uv]
package = true

[build-system]
requires = ["uv_build>=0.11.14,<0.12"]
build-backend = "uv_build"
